#268 edit project - add kpi
- add `new kpi` button on `project details - kpi step`
- fix reloading report data after updating
- add APIs for KPI
