# app/server/swagger.yaml
@@ -796,7 +796,6 @@ paths:
           description: Not found
         500:
           description: Server error
-
     delete:
       tags:
         - Reports
@@ -827,6 +826,136 @@ paths:
           description: Not found
         500:
           description: Server error
+
+  /api/v1/reports/{id}/kpis:
+    get:
+      tags:
+        - Reports
+        - KPI
+      summary: Find all KPIs of a report
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: report id
+          required: true
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Kpi'
+        400:
+          description: Bad request
+        401:
+          description: Unauthorized
+        404:
+          description: Not found
+        500:
+          description: Server error
+    post:
+      tags:
+        - Reports
+        - KPI
+      summary: Post a new KPI
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          description: report id
+          in: path
+          required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Kpi'
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Report'
+        400:
+          description: Bad request
+        401:
+          description: Unauthorized
+        404:
+          description: Not found
+        500:
+          description: Server error
+  /api/v1/reports/{id}/kpis/{kid}:
+    patch:
+      tags:
+        - Reports
+        - KPI
+      summary: Update an KPI
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: report id
+          required: true
+        - name: kid
+          in: path
+          description: report KPI id
+          required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/KpiRequest"
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Report'
+        400:
+          description: Bad request
+        401:
+          description: Unauthorized
+        404:
+          description: Not found
+        500:
+          description: Server error
+    delete:
+      tags:
+        - Reports
+        - KPI
+      summary: Delete a KPI
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: report id
+          required: true
+        - name: kid
+          in: path
+          description: KPI id
+          required: true
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Report'
+        400:
+          description: Bad request
+        401:
+          description: Unauthorized
+        404:
+          description: Not found
+        500:
+          description: Server error
+
 components:
   #-------------------------------
   # Reusable schemas (data models)
@@ -1063,6 +1192,7 @@ components:
       required:
         - name
         - end
+        - target
     FinancialStatus:
       type: object
       properties:
